--- a/redirect/index.html
+++ b/redirect/index.html
@@ -13,7 +13,7 @@
         const initButton = async () => {
             try {
                 // Адрем сервера
-                const URL = 'https://46.36.216.189:3000'
+                const URL = 'http://46.36.216.189:3000'
 
                 // Обработка query
                 const getQuery = (key) => {
