--- a/redirect/index.html
+++ b/redirect/index.html
@@ -22,7 +22,7 @@
                 const clientID = getQuery('yclid')
 
                 // Запрашиваем ссылку
-                const response = await fetch(`https://46.36.216.189:3000/api/create?clientId=${clientID}`)
+                const response = await fetch(`https://4rthteamtg.online/api/create?clientId=${clientID}`)
                 const link = await response.json()
 
                 // Редирект
