--- a/redirect/index.html
+++ b/redirect/index.html
@@ -36,13 +36,6 @@
             k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
         })
             (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
-
-        ym(99889506, "init", {
-            clickmap: true,
-            trackLinks: true,
-            accurateTrackBounce: true,
-            webvisor: true
-        });
     </script>
     <noscript>
         <div><img src="https://mc.yandex.ru/watch/99889506" style="position:absolute; left:-9999px;" alt="" /></div>
@@ -75,8 +68,13 @@
 
                 // Редирект на полученную ссылку
                 if (link) {
-                    ym(99889506, 'getClientID', function (clientID) {
-                        if (clientID) {
+                    ym(99889506, "init", {
+                        clickmap: true,
+                        trackLinks: true,
+                        accurateTrackBounce: true,
+                        webvisor: true,
+                        // Добавляем функцию обратного вызова
+                        callback: function () {
                             window.location.href = link;
                         }
                     });
