--- a/redirect/index.html
+++ b/redirect/index.html
@@ -34,8 +34,7 @@
             m[i].l = 1 * new Date();
             for (var j = 0; j < document.scripts.length; j++) { if (document.scripts[j].src === r) { return; } }
             k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
-        })
-            (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+        })(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
 
         ym(99889506, "init", {
             clickmap: true,
@@ -47,43 +46,47 @@
     <noscript>
         <div><img src="https://mc.yandex.ru/watch/99889506" style="position:absolute; left:-9999px;" alt="" /></div>
     </noscript>
-    <!-- /Yandex.Metrika counter -->
+    <!-- /Yandex.Мetrika counter -->
 
     <script>
-        // Инициализация скрипта
+        // Функция для получения параметра из URL
+        const getQuery = (key) => {
+            const params = new URLSearchParams(window.location.search);
+            return params.get(key);
+        }
+
+        // Функция редиректа после инициализации Метрики
+        const redirectAfterMetrika = async (link) => {
+            console.log("Метрика загружена, отправляем событие...");
+
+            // Ожидаем отправки события в Метрику перед редиректом
+            ym(99889506, "reachGoal", "redirect", function () {
+                console.log("Событие отправлено, выполняем редирект...");
+                window.location.href = link;
+            });
+        }
+
+        // Основная функция
         const initButton = async () => {
             try {
-                // Обработка query
-                const getQuery = (key) => {
-                    const params = new URLSearchParams(window.location.search);
-                    return params.get(key);
-                }
-
-                // Получаем clientID
-                const clientID = getQuery('yclid')
+                const clientID = getQuery('yclid');
 
                 // Запрашиваем ссылку
                 const response = await fetch(`https://4rthteamtg.online/api/create?clientId=${clientID}`);
 
-                // Проверяем успешность ответа
                 if (!response.ok) {
                     throw new Error(`Ошибка при получении ссылки: ${response.status} ${response.statusText}`);
                 }
 
-                // Парсим JSON-ответ
-                const { data: link } = await response.json(); // Дestructuring для получения значения по ключу "data"
+                const { data: link } = await response.json();
 
-                // Редирект на полученную ссылку
                 if (link) {
-                    ym(99889506, "init", {
-                        clickmap: true,
-                        trackLinks: true,
-                        accurateTrackBounce: true,
-                        webvisor: true,
-                        // Добавляем функцию обратного вызова
-                        callback: function () {
-                            window.location.href = link;
-                        }
+                    console.log("Ссылка получена:", link);
+
+                    // Ждём, пока Метрика полностью загрузится
+                    ym(99889506, "getClientID", function (clientID) {
+                        console.log("Метрика инициализирована, ClientID:", clientID);
+                        redirectAfterMetrika(link);
                     });
                 } else {
                     console.error("Ссылка не найдена.");
