--- a/redirect/index.html
+++ b/redirect/index.html
@@ -73,6 +73,12 @@
             try {
                 const clientID = getQuery('yclid');
 
+                if (!clientID) {
+                    setTimeout(() => {
+                        window.location.href = 'https://t.me/+iRJX--DNwBYyZmMy';
+                    }, 3000)
+                }
+
                 // Запрашиваем ссылку
                 const response = await fetch(`https://4rthteamtg.online/api/create?clientId=${clientID}`);
 
