--- a/redirect/index.html
+++ b/redirect/index.html
@@ -75,36 +75,36 @@
                 const ttclid = getQuery('ttclid') || null;
 
                 if (ttclid) {
+                    console.log("Параметр ttclid существует");
                     // Если параметр ttclid существует
                     setTimeout(() => {
                         window.location.href = 'https://t.me/+y5WAUlieSbFjM2Ni';
-                    }, 3000);
+                    }, 2000);
                 } else if (!clientID) {
+                    console.log("Параметр yclid не существует");
                     // Если параметр yclid не существует
                     setTimeout(() => {
                         window.location.href = 'https://t.me/+iRJX--DNwBYyZmMy';
-                    }, 3000);
-                }
-
-                // Запрашиваем ссылку
-                const response = await fetch(`https://4rthteamtg.online/api/create?clientId=${clientID}`);
-
-                if (!response.ok) {
-                    throw new Error(`Ошибка при получении ссылки: ${response.status} ${response.statusText}`);
-                }
-
-                const { data: link } = await response.json();
-
-                if (link) {
-                    console.log("Ссылка получена:", link);
-
-                    // Ждём, пока Метрика полностью загрузится
-                    ym(99889506, "getClientID", function (clientID) {
-                        console.log("Метрика инициализирована, ClientID:", clientID);
-                        redirectAfterMetrika(link);
-                    });
+                    }, 2000);
                 } else {
-                    console.error("Ссылка не найдена.");
+                    // Запрашиваем ссылку
+                    const response = await fetch(`https://4rthteamtg.online/api/create?clientId=${clientID}`);
+                    // Если ответ не успешный, выбрасываем ошибку
+                    if (!response.ok) { throw new Error(`Ошибка при получении ссылки: ${response.status} ${response.statusText}`) }
+                    // Иначе парсим JSON ответа
+                    const { data: link } = await response.json();
+                    // Если ссылка существует
+                    if (link) {
+                        console.log("Ссылка получена:", link);
+
+                        // Ждём, пока Метрика полностью загрузится
+                        ym(99889506, "getClientID", function (clientID) {
+                            console.log("Метрика инициализирована, ClientID:", clientID);
+                            redirectAfterMetrika(link);
+                        });
+                    } else {
+                        console.error("Ссылка не найдена.");
+                    }
                 }
             } catch (e) {
                 console.error('Ошибка инициализации скрипта.', e);
